--- a/src/components/site/templates/portfolio1/section/portfolio-detail/public.html
+++ b/src/components/site/templates/portfolio1/section/portfolio-detail/public.html
@@ -6,7 +6,7 @@
                     <div class="portfolio-info text-center">
 											<span class="data-list" ng-repeat="datum in section.settings.data">
 												<span ng-if="datum.name">{{datum.name}}:</span>
-												<a href="{{datum.url ? datum.url : 'javascript:void(0)'}}" class="{{datum.url ? 'live-demo' : ''}}">{{datum.text}}</a>
+												<a href="{{datum.url}}" class="{{datum.url ? 'live-demo' : ''}}">{{datum.text}}</a>
 												<span class="separator">  |  </span>
 											</span>
 										</div>
@@ -18,7 +18,7 @@
                         </div>
 
                         <h2>{{section.settings.project_name}}</h2>
-                        <p ng-bind-html='safeHtml(section.settings.description.replace(/\n/g,"<br />"))'></p>
+                        <p ng-bind-html='section.settings.description.replace(/\n/g,"<br />")'></p>
 
                         <div class="portfolio-navigation text-center">
                             <a href="{{section.settings.prev_project_url}}" class="pull-left"><i class="fa fa-long-arrow-left"></i> {{section.settings.prev_project_text}}</a>
